turtleart.circlesquare.CircleSquare.scala.error
Erreur de compilation :
CircleSquare:7: error: not found: value cercel
  cercel(50)
  ^