turtleart.circlesquare.CircleSquare.scala.code
override def run() {
  for (k <- 1 to 5){
    avance(100)
    droite(90)
  }
  avance(50)
  cercel(50)
}
